Ignoring files and updating packages

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,14 @@
 
 # production
 /build
+/.idea/*
+/scripts
+/extras
+/config
+
 
 # misc
+.gitignores
 .DS_Store
 .env.local
 .env.development.local
