--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.4.0",
+    "react-mdl": "^1.11.0",
     "react-motion": "^0.5.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
