--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,12 @@
 .env.development.local
 .env.test.local
 .env.production.local
+nodejs/
+package-lock.json
+yarn/
+
+
+
 
 npm-debug.log*
 yarn-debug.log*
